# python3-template

./: .gitignore  MANIFEST.in  MANIFEST.in.template  README-pypi.md.template  README.md  README.md.template  README_pypi.md  README_pypi.md.template  build.bat  build.bat.template  environment.yml  environment.yml.template  init.bat  init.py  name.py.template  pyproject.toml  pyproject.toml.template  python3-template.py  version.yml  version.yml.template
module_name/: main.py  version.yml.template
module_name/constants/: links.py.template  paths.py
python3_template/: version.yml
python3_template/constants/: __init__.py  links.py
src/module_name/: __init__.py.template  core.py
src/module_name/constants/: paths.py
